--- a/app/src/main/res/layout/activity_lektori.xml
+++ b/app/src/main/res/layout/activity_lektori.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Lektori">
+
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_navigation"
         android:layout_width="match_parent"
@@ -16,12 +17,47 @@
         app:itemIconTint="@color/bottom_nav_color"
         android:background="@color/brown_light"/>
 
-    <TextView
+    <com.applandeo.materialcalendarview.CalendarView
+        android:id="@+id/calendarView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textColor="@color/brown_dark"
-        android:textSize="12sp"
-        android:padding="8dp"
-        android:text="Na stránke sa pracuje."/>
+        app:abbreviationsBarColor="@color/brown_superlight"
+        app:abbreviationsLabelsColor="@color/brown_semilight"
+        app:anotherMonthsDaysLabelsColor="@color/brown_light"
+        app:daysLabelsColor="@color/brown_superdark"
+        app:disabledDaysLabelsColor="@color/brown_light"
+        app:eventsEnabled="true"
+        app:forwardButtonSrc="@drawable/ic_right_arrow"
+        app:headerColor="@color/brown_superlight"
+        app:headerLabelColor="@color/brown_superdark"
+        app:highlightedDaysLabelsColor="@color/brown_semidark"
+        app:pagesColor="@color/brown_superlight"
+        app:previousButtonSrc="@drawable/ic_left_arrow"
+        app:selectionColor="@color/brown_dark"
+        app:selectionLabelColor="@color/brown_superlight"
+        app:swipeEnabled="true"
+        app:todayLabelColor="@color/brown"
+        app:type="one_day_picker" />
+
+    <ListView
+        android:id="@+id/listview_kalendar"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/calendarView"
+        android:layout_above="@+id/bottom_navigation"
+        android:divider="@color/brown_superlight"
+        />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_add"
+        android:layout_above="@+id/listview_kalendar"
+        android:layout_alignParentEnd="true"
+        android:layout_margin="6dp"
+        android:id="@+id/floatButton"
+        app:fabSize="mini"
+        tools:ignore="ContentDescription"
+        android:layout_alignParentRight="true" />
 
 </RelativeLayout>
