--- a/app/src/main/res/layout/activity_uvod.xml
+++ b/app/src/main/res/layout/activity_uvod.xml
@@ -11,8 +11,8 @@
         android:layout_height="match_parent"
         android:layout_centerInParent="true"
         android:scaleType="centerCrop"
-        android:alpha="0.5"
-        android:src="@drawable/kostol"
+        android:alpha="0.4"
+        android:src="@drawable/kostol_png"
         android:layout_above="@+id/bottom_navigation"/>
 
     <TextView
