--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -8,11 +8,11 @@
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/brown_dark</item>
         <item name="colorSecondaryVariant">@color/brown_superdark</item>
-        <item name="colorOnSecondary">@color/black</item>
+        <item name="colorOnSecondary">@color/brown_superlight</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
-        <item name="android:textColor">@color/black</item>
+        <item name="android:textColor">@color/brown_superdark</item>
         <item name="android:windowBackground">@color/brown_superlight</item>
     </style>
 </resources>
