--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,7 @@
     <color name="brown_semilight">#d3c2a7</color>
     <color name="brown_light">#e7ddce</color>
     <color name="brown_superlight">#f4efe8</color>
+    <color name="brown_extralight">#faf8f5</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="transparent">#80000000</color>
