--- a/app/src/main/res/layout/people_list.xml
+++ b/app/src/main/res/layout/people_list.xml
@@ -10,6 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/number"
+        android:textSize="17sp"
         android:layout_gravity="center"
         android:layout_weight="4" />
 
@@ -17,6 +18,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/name"
+        android:textSize="17sp"
         android:layout_gravity="center"
         android:layout_weight="1" />
 
