--- a/app/src/main/res/layout/news_list.xml
+++ b/app/src/main/res/layout/news_list.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -37,10 +38,20 @@
         android:layout_below="@+id/head"
         android:orientation="vertical">
 
-    <WebView
-        android:id="@+id/content_list"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        <WebView
+            android:id="@+id/content_list"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/citat_viac"
+                android:textColor="@color/brown_dark"
+                android:background="@drawable/dalej_background"
+                android:padding="6dp" />
+
+
     </LinearLayout>
 
 </RelativeLayout>
