--- a/app/src/main/res/layout/fragment_news_content.xml
+++ b/app/src/main/res/layout/fragment_news_content.xml
@@ -1,16 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".AktualityContent">
+    tools:context=".news.NewsContentFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:layout_above="@+id/bottom_navigation"
         android:paddingTop="8dp"
         android:paddingRight="8dp"
         android:paddingLeft="8dp">
@@ -19,7 +17,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
-        android:background="@drawable/news_background"
+        android:background="@drawable/toast_background"
         android:orientation="vertical"
         android:padding="8dp"
         android:id="@+id/head">
@@ -46,15 +44,4 @@
         android:id="@+id/content" />
     </LinearLayout>
 
-    <com.google.android.material.bottomnavigation.BottomNavigationView
-        android:id="@+id/bottom_navigation"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:labelVisibilityMode="labeled"
-        app:menu="@menu/bottom_navigation_menu"
-        android:layout_alignParentBottom="true"
-        app:itemTextColor="@color/bottom_nav_color"
-        app:itemIconTint="@color/bottom_nav_color"
-        android:background="@color/brown_light"/>
-
-</RelativeLayout>
+</FrameLayout>
