--- a/app/src/main/res/layout/fragment_uvod.xml
+++ b/app/src/main/res/layout/fragment_uvod.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Uvod">
+    tools:context=".intro.IntroFragment">
 
     <ImageView
         android:layout_width="match_parent"
@@ -12,8 +11,7 @@
         android:layout_centerInParent="true"
         android:scaleType="centerCrop"
         android:alpha="0.4"
-        android:src="@drawable/kostol_png"
-        android:layout_above="@+id/bottom_navigation"/>
+        android:src="@drawable/kostol_png" />
 
     <TextView
         android:layout_width="match_parent"
@@ -26,15 +24,4 @@
         android:layout_marginRight="30dp"
         android:textColor="@color/brown_dark"/>
 
-    <com.google.android.material.bottomnavigation.BottomNavigationView
-        android:id="@+id/bottom_navigation"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:labelVisibilityMode="labeled"
-        app:menu="@menu/bottom_navigation_menu"
-        android:layout_alignParentBottom="true"
-        app:itemTextColor="@color/bottom_nav_color"
-        app:itemIconTint="@color/bottom_nav_color"
-        android:background="@color/brown_light"/>
-
-</RelativeLayout>
+</FrameLayout>
