--- a/app/src/main/res/layout/toast.xml
+++ b/app/src/main/res/layout/toast.xml
@@ -2,13 +2,10 @@
     android:id="@+id/toast_layout"
     android:orientation="vertical"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:padding="8dp"
-    android:background="@drawable/news_background">
+    android:layout_height="wrap_content">
 
     <TextView android:id="@+id/toast_text"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textColor="@color/brown_dark"/>
+        android:layout_height="wrap_content" />
 
 </LinearLayout>
