--- a/app/src/main/res/layout/fragment_lector.xml
+++ b/app/src/main/res/layout/fragment_lector.xml
@@ -6,6 +6,10 @@
     android:layout_height="match_parent"
     tools:context=".lector.LectorFragment">
 
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -51,5 +55,7 @@
             app:fabSize="mini"
             tools:ignore="ContentDescription" />
     </RelativeLayout>
+
+    </ScrollView>
 
 </FrameLayout>
