--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -11,7 +11,7 @@
     <item
         android:id="@+id/menu_webpage"
         android:icon="@drawable/ic_web"
-        android:title="Webstránka"/>
+        android:title="Web"/>
     <item
         android:id="@+id/menu_lector"
         android:icon="@drawable/ic_lektori"
