--- a/app/src/main/res/layout/fragment_mass_information.xml
+++ b/app/src/main/res/layout/fragment_mass_information.xml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+
+
+<RelativeLayout
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -9,14 +13,14 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
-        android:text="Problémy so sťahovaním."
-        android:id="@+id/download_info"/>
+        android:text=""
+        android:id="@+id/downloadInfo"/>
 
     <androidx.appcompat.widget.AppCompatButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/download_info"
-        android:id="@+id/download_button"
+        android:layout_below="@+id/downloadInfo"
+        android:id="@+id/downloadButton"
         android:text="@string/download"
         style="@style/Button"/>
 
@@ -35,3 +39,4 @@
         android:contentDescription="@string/massInfo" />-->
 
 </RelativeLayout>
+</layout>
