--- a/app/src/main/res/layout/fragment_lector.xml
+++ b/app/src/main/res/layout/fragment_lector.xml
@@ -10,27 +10,14 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <com.applandeo.materialcalendarview.CalendarView
+        <com.kizitonwose.calendar.view.CalendarView
             android:id="@+id/calendarView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:abbreviationsBarColor="@color/brown_superlight"
-            app:abbreviationsLabelsColor="@color/brown"
-            app:anotherMonthsDaysLabelsColor="@color/brown_light"
-            app:daysLabelsColor="@color/brown_superdark"
-            app:disabledDaysLabelsColor="@color/brown_light"
-            app:eventsEnabled="true"
-            app:forwardButtonSrc="@drawable/ic_right_arrow"
-            app:headerColor="@color/brown_superlight"
-            app:headerLabelColor="@color/brown_superdark"
-            app:highlightedDaysLabelsColor="@color/brown_semidark"
-            app:pagesColor="@color/brown_superlight"
-            app:previousButtonSrc="@drawable/ic_left_arrow"
-            app:selectionColor="@color/brown_dark"
-            app:selectionLabelColor="@color/brown_superlight"
-            app:swipeEnabled="true"
-            app:todayLabelColor="@color/red"
-            app:type="one_day_picker" />
+            app:cv_daySize="seventhWidth"
+            app:cv_outDateStyle="endOfGrid"
+            app:cv_dayViewResource="@layout/calendar_day_layout"
+            app:cv_monthHeaderResource="@layout/calendar_day_titles_container"/>
 
         <ListView
             android:id="@+id/listviewCalendar"
@@ -43,10 +30,9 @@
             android:id="@+id/floatButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_above="@+id/listviewCalendar"
+            android:layout_alignBottom="@+id/calendarView"
             android:layout_alignParentEnd="true"
-            android:layout_alignParentRight="true"
-            android:layout_margin="6dp"
+            android:layout_marginEnd="6dp"
             android:src="@drawable/ic_add"
             app:fabSize="mini"
             tools:ignore="ContentDescription" />
